change songs to populate randomly

--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
-  "name": "zimmerdle_html",
-  "version": "1.0.0",
-  "description": "",
-  "main": "main.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "express": "^4.18.2",
-    "path": "^0.12.7"
-  }
+	"name": "zimmerdle_html",
+	"version": "1.0.0",
+	"description": "",
+	"main": "main.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"dev": "concurrently \"npm app.js\" \"cd public && node main.js\""
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"dependencies": {
+		"express": "^4.18.2",
+		"path": "^0.12.7"
+	}
 }
